# LyricRs

./: .gitignore  Cargo.toml  README.md
src/: app.rs  cache.rs  lyrics.rs  main.rs  spotify.rs
